--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,18 +1,11 @@
-langchain
-chromadb
-pypdf
-pytest
-langchain-community
-langchain-ollama
-langchain-chroma
-pytesseract
-pillow
-python-docx
-python-pptx
-openpyxl
-pandas
-transformers
-fpdf
-PyMuPDF
-aiofiles
-chardet
+aiofiles==24.1.0
+chardet==5.2.0
+fitz==0.0.1.dev2
+langchain==0.3.20
+langchain_chroma==0.2.2
+langchain_ollama==0.2.3
+langchain_text_splitters==0.3.6
+openpyxl==3.1.2
+openpyxl==3.1.5
+python_docx==1.1.2
+python_pptx==1.0.2
