--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "herma",
   "version": "0.0.0",
+  "description": "Locally-run llm application",
+  "author": "Niko Barciak, Nick Pianfetti",
   "main": "electron/dist/main.js",
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:electron\"",
     "dev:frontend": "cd frontend && vite",
     "dev:electron": "cross-env NODE_ENV=development tsc -p electron/tsconfig.json && electron electron/dist/main.js",
-    "build": "npm run build:frontend && npm run build:electron",
+    "build:python": "node scripts/dist/build-python.js",
+    "build": "npm run build:python && npm run build:frontend && npm run build:electron",
     "build:frontend": "cd frontend && tsc && vite build",
     "build:electron": "tsc -p electron/tsconfig.json",
     "install-all": "npm install && python3 -m pip install -r python/requirements.txt",
     "lint": "eslint .",
     "clean": "rimraf electron/dist frontend/dist",
-    "test:built": "cross-env NODE_ENV=production electron electron/dist/main.js"
+    "test:built": "cross-env NODE_ENV=production electron electron/dist/main.js",
+    "postinstall": "tsc -p scripts/tsconfig.json"
   },
   "dependencies": {
     "@types/marked": "^6.0.0",
@@ -38,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "rimraf": "^6.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
@@ -50,22 +55,35 @@
         "filter": ["**/*"]
       },
       {
+        "from": "dist/herma_python",
+        "to": "python/herma_python",
+        "filter": ["**/*"]
+      },
+      {
         "from": "python",
         "to": "python",
         "filter": ["**/*"]
+      },
+      {
+        "from": "scripts/dist/postinstall.js",
+        "to": "scripts/postinstall.js"
       }
     ],
-    "asarUnpack": ["resources/ollama/**"],
+    "asarUnpack": ["resources/ollama/**", "python/herma_python*"],
+    "afterPack": "./scripts/dist/after-pack.js",
     "mac": {
       "target": ["dmg"],
-      "hardenedRuntime": true
+      "hardenedRuntime": true,
+      "icon": "frontend/public/Herma.icns"
     },
     "linux": {
       "target": ["AppImage"],
-      "executableName": "herma"
+      "executableName": "herma",
+      "icon": "frontend/public/Herma.jpeg"
     },
     "win": {
-      "target": ["nsis"]
+      "target": ["nsis"],
+      "icon": "frontend/public/Herma.ico"
     }
   }
 }
